<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />
    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/extras" />
    <item
        android:id="@+id/new_post"
        android:icon="@drawable/ic_new_post"
        android:title="@string/post" />
    <item
        android:id="@+id/profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile"
        />
    <item
        android:id="@+id/message"
        android:icon="@drawable/ic_chat"
        android:title="@string/messages"/>



</menu>
